# aws-mlops-playground

./: .gitignore  .pre-commit-config.yaml  README.md  explore_models.ipynb  index.html  main.py  mnist_cnn_CNTK_translated2.onnx  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-start.sh
.github/workflows/: functions.yml  pipelines.yml  pytorch.yml  sagemaker.yml  test.yml  tf.yml  web.yml
assets/: index-BTGP3oVk.js  index-X_Lwhb7y.js  index-jYU2duZ-.js
iam/: GithubActionsMLOpsExecutionPolicy.json  GithubActionsMLOpsExecutionPolicy.json.json  LambdaSageMakerS3Policy.json
pipelines/minist/: explore_data.ipynb  prepare_data.py
pipelines/mnist/: explore_data.ipynb  notebook_train.py  pipeline.py  pytorch_train.py  train.py
pipelines/mnist/code/: evaluation.py  mnist.py  preprocessing.py
pipelines/mnist/templates/: inference.py  mnist.py
terraform/: .gitignore  main.tf  role.tf
tests/pipelines/mnist/code/: test_evaluation.py  test_mnist_train.py  test_preprocess.py
tests/pipelines/mnist/code/fixtures/: fixtures.py  test.parquet  validation.parquet
web/: index.html  package.json  vite.config.ts
web/public/: mnist_cnn_CNTK_translated.onnx  models.json
web/src/: App.tsx  CanvasDraw.tsx  Inference.tsx  ModelPicker.tsx  js-untar.d.ts
web/src/utils/: config.ts  downloadModel.ts  math.ts  runModel.ts
