[project]
name = "aws-mlops-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.13",
    "onnx>=1.17.0",
    "onnxscript>=0.2.5",
    "pandas>=2.2.3",
    "prefect>=3.4.1",
    "pyarrow>=20.0.0",
    "sagemaker>=2.244.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
