[project]
name = "aws-mlops-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.13",
    "onnx>=1.17.0",
    "onnx-simplifier>=0.4.36",
    "onnxscript>=0.2.5",
    "pandas>=2.2.3",
    "prefect>=3.4.1",
    "pyarrow>=20.0.0",
    "sagemaker>=2.244.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "typer>=0.15.4",
]

[dependency-groups]
dev = [
    "functions",
    "pipelines",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-parametrization>=2022.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]

[tool.uv]
package=false

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
pipelines = { workspace = true }
function = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
