[project]
name = "aws-mlops-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.13",
]

[dependency-groups]
dev = [
    "functions",
    "pipelines",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-parametrization>=2022.2.1",
    "ruff>=0.11.11",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]

[tool.uv]
package=false

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
pipelines = { workspace = true }
functions = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
